--- a/hana_project_book/_config.yml
+++ b/hana_project_book/_config.yml
@@ -4,6 +4,7 @@
 title: HANA Projekt Induktive Erwärmung
 author: Samuel Dobler, Alexander Grunder, Pascal Heiniger
 logo: logo.png
+copyright: 2025
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
