--- a/hana_project_book/_toc.yml
+++ b/hana_project_book/_toc.yml
@@ -4,10 +4,21 @@
 format: jb-book
 root: intro
 parts:
-  - caption: Aufgabenstellung
+  - caption: Einleitung
     numbered: 3
     chapters:
-      - file: Aufgabenstellung/Beispiel_Code.md
+      - file: Einleitung/Einleitung.md
+      - file: Einleitung/global_constants.md
+  - caption: Geometrie
+    numbered: 1
+    chapters:
+      - file: Geometrie/stdGeo.ipynb
+      - file: Geometrie/TopfGeo.ipynb
+  - caption: Hilfsmaterial
+    numbered: 3
+    chapters:
+      - file: Hilfsmaterial/Beispiel_Code.md
+      - file: Hilfsmaterial/Aufgabenstellung_Clone.md
   - caption: Jupyter-Book Templates
     numbered: 1
     chapters:
