--- a/hana_project_book/_config.yml
+++ b/hana_project_book/_config.yml
@@ -4,7 +4,7 @@
 title: HANA Projekt Induktive Erwärmung
 author: Samuel Dobler, Alexander Grunder, Pascal Heiniger
 logo: logo.png
-copyright: 2025
+copyright: "2025"
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
@@ -29,5 +29,5 @@ repository:
 # Add GitHub buttons to your book
 # See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
 html:
-  use_issues_button: true
+  use_issues_button: false
   use_repository_button: true
