Topf Platzhalter ergänzt

--- a/hana_project_book/_toc.yml
+++ b/hana_project_book/_toc.yml
@@ -22,6 +22,7 @@ parts:
     numbered: 3
     chapters:
       - file: LsgVisualisierungDiskussion/LsgStdGeo.ipynb
+      - file: LsgVisualisierungDiskussion/LsgTopfGeo.ipynb
   - caption: Fazit
     numbered: 3
     chapters:
